# unreal-material-mcp

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/plans/: 2026-03-03-material-mcp-tier1-design.md  2026-03-03-material-mcp-tier1-plan.md  2026-03-03-material-mcp-tier2-design.md  2026-03-03-material-mcp-tier2-plan.md  2026-03-04-tier1-tier2-missing-features-design.md  2026-03-04-tier1-tier2-missing-features-plan.md  2026-03-05-material-mcp-expansion-plan.md
src/unreal_material_mcp/: __init__.py  __main__.py  config.py  editor_bridge.py  server.py
src/unreal_material_mcp/helpers/: material_helpers.py
src/unreal_material_mcp/templates/: material_templates.py
tests/: test_server.py
